# GReX-T3

./: pyproject.toml
coincidence/: classify.py
grex_t3/: T3_monitor.py  analysis_tools.py  cand_plotter.py  cand_plotter_3-5.py  cand_plotter_cornell.py  cand_plotter_new.py  candproc_tools.py  create_simulated_bursts.py  fdmt.py  rfi_offline.py
notebooks/: grex-harvard-firstlight.ipynb
notebooks/.ipynb_checkpoints/: grex-harvard-firstlight-checkpoint.ipynb
services/: cand_plotter.service  clear_disks.service  run_clear_disks.py
simulation/: create_simulated_bursts.py  simulate_frb.py
