[tool.poetry]
name = "grex-t3"
version = "0.1.0"
description = ""
authors = ["Liam Connor"]
readme = "README.md"
packages = [{include = "grex_t3"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0.2"
astropy = "^5.3"
keras = "^2.13.1"
tensorflow = "^2.13.0"
your = "^0.6.7"
jax = "^0.4.14"
jaxlib = "^0.4.14"
paramiko = "^3.4.0"
inotify = "^0.2.10"
slack-sdk = "^3.27.1"
xarray = "^2024.3.0"
dask = "^2024.9.1"
torch = "^2.3.0"
tqdm = "^4.66.4"
llvmlite = "^0.43.0"
numpy = ">=1.23.5,<2.0.0"
netCDF4 = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
